# cloudflare-operator

./: .gitignore  Cargo.toml  Makefile  README.md  arch.md  bench-test-todo.md  build_run.sh  config.yaml  todo.md
.cargo/: config.toml
controller/: Cargo.toml
controller/src/: main.rs
controller/src/app/: mod.rs
controller/src/config/: file.rs
framework/: Cargo.toml  build.rs  quic_metadata_protocol.capnp  tunnelrpc.capnp
framework/src/: lib.rs
framework/src/api/cloudflare/: common.rs  mod.rs
framework/src/api/cloudflare/tunnels/: mod.rs  types.rs
framework/src/cloudflare/: mod.rs
framework/src/cloudflare/api/: mod.rs
framework/src/cloudflare/api/tunnels/: mod.rs  types.rs
framework/src/cloudflare/rpc/: alias.rs  clients.rs  logged.rs  mod.rs  quic_metadata_protocol.rs  tunnelrpc.rs  types.rs
framework/src/cloudflare/supervisor/: datagram.rs  dns.rs  edge.rs  mod.rs  tls.rs  tunnel.rs  types.rs
framework/src/cloudflare/supervisor/tunnel/: mod.rs  utils.rs
framework/src/incoming/: mod.rs  types.rs
framework/src/incoming/cloudflare_tunnels/: dns.rs  edge.rs  mod.rs  tls.rs  types.rs
framework/src/incoming/cloudflare_tunnels/rpc/: clients.rs  logged.rs  mod.rs  types.rs
framework/src/incoming/cloudflare_tunnels/tunnel/: mod.rs  utils.rs
framework/src/rpc/: mod.rs  rpc.rs
framework/src/rpc/cloudflare/: dns.rs  mod.rs  types.rs
framework/src/rpc/cloudflare/supervisor/: edge.rs  mod.rs  tls.rs  tunnel.rs
framework/src/rpc/tunnelrpc/: mod.rs
framework/src/types/: cloudflare.rs  mod.rs
ingress/: Cargo.toml
ingress/src/: main.rs  setup.rs
ingress/src/app/: mod.rs
ingress/src/app/ingress/: mod.rs
ingress/src/app/ingress/router/: manager.rs  mod.rs  types.rs
ingress/src/app/ingress/router/types/: mod.rs
ingress/src/app/ingress/router/types/auth/: cloudflare.rs  mod.rs
ingress/src/app/ingress/router/types/http/: container.rs  mod.rs  path.rs
ingress/src/app/ingress/router/types/ingress/: cloudflare_tunnels.rs  mod.rs
ingress/src/app/ingress/router/types/upstream/: container.rs  http.rs  mod.rs  upstreams.rs
ingress/src/config/: args.rs  cfg.rs  env.rs  file.rs  mod.rs
ingress/src/config/types/: auth.rs  cloudflare.rs  k8s.rs  mod.rs
ingress/src/config/types/ingress/: http.rs  mod.rs  upstream.rs
procmacros/: Cargo.toml
procmacros/src/: lib.rs
src/: config.rs  context.rs  errors.rs  main.rs
src/api/: endpoint.rs  mod.rs  types.rs
src/api/endpoint/: json.rs  macros.rs  mod.rs  string.rs  vec_8.rs
src/config/: env.rs  file.rs
src/context/: mod.rs  run.rs
src/utils/: logger.rs  macros.rs  mod.rs
utils/: Cargo.toml
utils/src/: common.rs  ip.rs  lib.rs  logger.rs  macros.rs
utils/src/context/: mod.rs  wait.rs
