[package]
name = "cloudflared-ingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.1.1"
clap = { version = "4.0.9" }
serde_yaml = "0.9.13"
serde = { version = "1.0.145", features = ["derive"] }
serde-env = "0.1.0"
