[package]
name = "cloudflared-ingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.1.1"
clap = { version = "4.0.10" }
serde_yaml = "0.9.13"
serde = { version = "1.0.145", features = ["derive"] }
serde-env = "0.1.0"
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["http2"] }
async-trait = "0.1.57"
serde_json = "1.0.85"
serde_qs = "0.10.1"
http-body = "0.4.5"
