[package]
name = "framework"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
capnpc = "0.14.9"
anyhow = "1.0.65"

[dependencies]
procmacros = { path = "../procmacros" }
utils = { path = "../utils" }
anyhow = "1.0.65"
base64 = "0.13.0"
capnp = "0.14.10"
capnp-rpc = "0.14.1"
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3.24"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json", "brotli"] }
serde = { version = "1.0.145", features = ["derive", "serde_derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
uuid = { version = "1.2.0", features = ["serde", "v4"] }
tokio-context = "0.1.3"
bitflags = "1.3.2"
rustls = "0.20.6"
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.1"
trust-dns-resolver = "0.22.0"
quinn = "0.8.5"
