[package]
name = "ingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
framework = { path = "../framework" }
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
anyhow = "1.0.65"
cloudflare = "0.9.1"
serde_yaml = "0.9.13"
serde = { version = "1.0.145", features = ["derive"] }
serde-env = "0.1.0"
clap = "4.0.10"
uuid = { version = "1.2.0", features = ["v4"] }
