[package]
name = "ingress"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
framework = { path = "../framework" }
tokio = { version = "1.21.2", features = ["full", "tracing"] }
log = "0.4.17"
anyhow = "1.0.65"
serde_yaml = "0.9.13"
serde = { version = "1.0.145", features = ["derive"] }
serde-env = "0.1.0"
clap = "4.0.10"
tracing = "0.1.37"
notify = "5.0.0"
tuple-conv = "1.0.1"
uuid = { version = "1.2.1", features = ["v4"] }
bitflags = "1.3.2"
async-trait = "0.1.57"
